if(DEFINED ENV{MKLROOT} OR CMAKE_Fortran_COMPILER_ID STREQUAL Intel)
  set(USEMKL 1)
else()
  set(USEMKL 0)
endif()

add_executable(lp95 DemoLapack95.F90 assert.f90)
target_link_libraries(lp95 PRIVATE lapack95)
target_compile_definitions(lp95 PRIVATE USEMKL=${USEMKL})
add_test(NAME basic COMMAND $<TARGET_FILE:lp95>)
